# URL_Shortener_Scalable

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  package-lock.json  post.lua  prometheus.yml  wrk_post.lua
.github/workflows/: neuralegion.yml  rust.yml
backend/: .env  Cargo.toml  Dockerfile  docker-compose.yml
backend/src/: client.rs  db.rs  handlers.rs  main.rs
backend/tests/: handlers_test.rs
benches/: url_shortener_benchmark.rs
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @radix-ui.js  @swc.js  @tabler.js  class-variance-authority.js  clsx.js  framer-motion.js  lucide-react.js  motion-dom.js  motion-utils.js  next-themes.js  next.js  tailwind-merge.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: webpack.d8c6b339509ec218.hot-update.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/src/app/: layout.tsx  providers.tsx
frontend/src/app/generate/: page.tsx
frontend/src/components/: navbar.tsx  toggle.tsx
frontend/src/components/ui/: floating-dock.tsx
frontend/url_shortener/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
nginx/: nginx.conf
src/: .env  client.rs  db.rs  handlers.rs  main.rs  server.rs
tests/: db_tests.rs
(+13 files in other folders)
