[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
base62 = "2.2.1"
md-5 = "0.10.0"
chrono = "0.4.39"
dotenv = "0.15.0"
http = "1.2.0"
once_cell = "1.18.0"
rand = "0.8.5"
redis = { version = "0.25.2", features = ["tokio-comp"] }
ring = "0.17.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
warp = "0.3.7"
mockall = "0.11.3"
hyper = { version = "0.14", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["async"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"

[[bench]]
name = "url_shortener_benchmark"
harness = false
